xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__simple_string_concat.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'hello' || 'world'\")"
---
Ok(
    Atomic(
        String(
            "helloworld",
        ),
    ),
)
