xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__some_quantifier_empty_sequence.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"some $x in () satisfies $x eq 5\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
