xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__some_quantifier_expr_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"some $x in (1, 2, 3) satisfies $x eq 5\")"
---
Ok(
    Atomic(
        Boolean(
            false,
        ),
    ),
)
