xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__static_call_with_placeholders.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"my_function(?, 2)(5)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                7,
            ),
        ),
    ),
)
