xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__static_function_call_nested.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(r#\"fn:string-join((\"A\"),xs:string(\"A\"))\"#)"
---
Ok(
    Item(
        Atomic(
            String(
                "A",
            ),
        ),
    ),
)
