xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__string_compare_eq_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'hello' eq 'world'\")"
---
Ok(
    Item(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
