xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__string_compare_general_eq_true.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'hello' = 'hello'\")"
---
Ok(
    Item(
        Atomic(
            Boolean(
                true,
            ),
        ),
    ),
)
