xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__string_document_node.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a>A</a><b>B</b></doc>\"#, \"string(doc)\")"
---
Ok(
    Atomic(
        String(
            "AB",
        ),
    ),
)
